Have storage again (hardly tested). Problem: setting tempo, gain when stopped should not set the nextX value... but immediately. Earlier input type range with big knob better on iOS (regular style good for computer, though). Animation glitch on play after stopping during beat zero.

--- a/css/simple-test.css
+++ b/css/simple-test.css
@@ -1,10 +1,13 @@
 /* setBarViewSize() sets canvas intrinsic size from css  */
 
+/* .visible { visibility: visible; } */
+.hidden { visibility: hidden }
 
 body {
 	margin: 1em;
 	font-family: sans-serif;
 	font-size: 12pt;
+	line-height: 15pt;
 }
 
 @media screen and (min-device-width: 700px) {
@@ -27,6 +30,7 @@ div#controls > div,  div#displays > div {
 button, span, input, select, canvas#barView, .pendulum, div#pendulumContainer {
 	display: inline-block; 
 	font: inherit; /* here everything em-based */
+	line-height: inherit;
 	height: 2em; /* not select */
 }
 
@@ -51,11 +55,6 @@ input[type="range"] {
 	width: 16em;
 }
 
-/* 
-canvas#barView, div#pendulumContainer {
-	width: 22em;
-}
- */
 .wideDisplay {
 	width: 22em;
 	/* background-color: #fcc; */
@@ -69,7 +68,6 @@ canvas#barView, div#pendulumContainer {
 
 div#pendulumContainer {
 	position: relative; /* children */
-	/* border: 0.5px solid gray; */
 	outline: 0.5px solid gray;
 }
 /* swing and hits */
@@ -77,6 +75,7 @@ div#pendulumContainer {
 	width: 2em;
 	background-color: #0f0;
 	position: absolute;
+	opacity: 0;
 } 
 #pendulumSwing {
 	/* actual transition, transform defined and triggered in gui.js */
@@ -84,15 +83,14 @@ div#pendulumContainer {
 	-webkit-transition-timing-function: linear;
 	transition-timing-function: linear;
 	background-color: #ccc;
+	opacity: 1;
 } 
 #pendulumHit {
 	left: 0;
-	opacity: 0;
 }
 #pendulumHit2 {
 	/* right did not work ? */
 	left: 20em;
-	opacity: 0;
 }
 /* animation-name set in gui.js */
 @keyframes opa {
